# cowsay-rs

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  devenv.nix  devenv.yaml  dist-workspace.toml  justfile  rust-toolchain.toml  rustfmt.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: build-docker.yml  changelog.yaml  ci.yaml  codeql.yaml  homebrew.yaml  npm.yml  publish-homebrew.yml  publish-npm.yml  publish-wasm.yml  release.yml  security.yaml  version.yaml  website-ci.yaml  website-deploy.yaml
crates/cowsay/: Cargo.toml
crates/cowsay-cli/: Cargo.toml
crates/cowsay-cli/src/: main.rs
crates/cowsay-cli/tests/: test_options.rs
crates/cowsay-parser/: Cargo.toml
crates/cowsay-parser/src/: builder.rs  errors.rs  lib.rs
crates/cowsay-template/: Cargo.toml
crates/cowsay-template/src/: errors.rs  lib.rs  loader.rs  patterns.rs
crates/cowsay-wasm/: Cargo.toml
crates/cowsay-wasm/src/: lib.rs  options.rs
crates/cowsay-wasm/tests/: api.rs
crates/cowsay/src/: builder.rs  cows.rs  errors.rs  lib.rs
crates/cowsay/tests/: test_cowsay_compatibility.rs  test_long_inputs.rs
crates/cowsay/tests/expected_outputs/: file_actually.txt  file_alpaca.txt  file_beavis.zen.txt  file_blowfish.txt  file_bong.txt  file_bud-frogs.txt  file_bunny.txt  file_cheese.txt  file_cower.txt  file_cupcake.txt  file_default.txt  file_dragon-and-cow.txt  file_dragon.txt  file_elephant-in-snake.txt  file_elephant.txt  file_eyes.txt  file_flaming-sheep.txt  file_fox.txt  file_ghostbusters.txt  file_head-in.txt  file_hellokitty.txt  file_kiss.txt  file_kitty.txt  file_koala.txt  file_kosh.txt  file_llama.txt  file_luke-koala.txt  file_mech-and-cow.txt  file_meow.txt  file_milk.txt  file_moofasa.txt  file_moose.txt  file_mutilated.txt  file_ren.txt  file_sheep.txt  file_skeleton.txt  file_small.txt  file_stegosaurus.txt  file_stimpy.txt  file_supermilker.txt  (+17 more)
docker/cowsay/: Containerfile
docker/website/: Containerfile
scripts/: create-integration-test-outputs.sh  create-release.sh  create_integration_test_outputs.sh  update-github-actions-checkout-version.sh
website/: eslint.config.mjs  index.html  nuxt.config.ts  package.json  stitch.html  tsconfig.json
website/.nuxt/: eslint-typegen.d.ts  eslint.config.mjs  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.server.json  tsconfig.shared.json
website/.nuxt/dev/: index.mjs  index.mjs.map
website/.nuxt/manifest/: latest.json
website/.nuxt/manifest/meta/: dev.json
website/.nuxt/types/: build.d.ts  nitro-imports.d.ts  nitro-nuxt.d.ts
website/app/: app.vue
website/app/assets/css/: main.css
website/app/components/buttons/: DefaultBtn.vue
website/app/components/fields/: ErrorList.vue  NumericField.vue  SelectField.vue  SwitchField.vue  TextArea.vue  TextField.vue
website/app/components/layout/: AppFooter.vue  AppHeader.vue
website/app/components/titles/: PageTitle.vue  SectionTitle.vue
website/app/components/views/: AboutView.vue  IntroductionView.vue  PlaygroundView.vue
website/app/composables/: cowsay.ts  errors.ts  formValidation.ts
website/app/pages/: index.vue
website/src/: main.ts
