[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.16"
edition = "2024"
rust-version = "1.91.0"
homepage = "https://franco-grobler.github.io/cowsay-rs/"
readme = "./README.md"
documentation = "https://franco-grobler.github.io/cowsay-rs/"
description = "A Rust implementation of the classic cowsay program"
repository = "https://github.com/franco-grobler/cowsay-rs"
authors = ["Franco Grobler <franco@grobler.fyi>"]
license = "UNLICENSE"
categories = ["command-line-utilities"]
keywords = ["cowsay", "cli", "command-line", "ascii-art", "fun"]

[workspace.dependencies]
cowsay = { path = "crates/cowsay" }
cowsay-parser = { path = "crates/cowsay-parser" }
cowsay-template = { path = "crates/cowsay-template" }

clap = { version = "4.5.51", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
getrandom = { version = "0.3.4" }
include_directory = "0.1.1"
js-sys = { version = "0.3.82" }
log = { version = "0.4.17" }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.4" }
textwrap = { version = "0.16.2", features = [] }
# uuid = { version = "1.18.1", features = [
#   "v4",
#   "fast-rng",
#   "macro-diagnostics",
# ] }
wasm-bindgen = { version = "0.2.105" }
wasm-bindgen-test = { version = "0.3.55" }

[workspace.metadata.cargo-shear]
ignored = ["getrandom", "uuid"]


[workspace.lints.rust]
# Deny lints that are "warn" by default
warnings = "deny"

# --- Code Quality & Correctness ---
unreachable_pub = "deny" # Detects public items that are not reachable
unsafe_code = "deny"     # Forbids any use of `unsafe` blocks.

# --- Documentation ---
missing_docs = "deny"                  # Requires all public items to be documented
missing_debug_implementations = "deny" # Requires `#[derive(Debug)]` on structs/enums

# --- Style ---
non_snake_case = "deny"
non_camel_case_types = "deny"
non_upper_case_globals = "deny"

# === Clippy Lints ===
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"      # Good to have, but `pedantic` enables it.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
