[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.22"
edition = "2024"
rust-version = "1.91.0"
homepage = "https://franco-grobler.github.io/cowsay-rs/"
readme = "./README.md"
documentation = "https://franco-grobler.github.io/cowsay-rs/"
description = "Rust implementation of the classic cowsay program"
repository = "https://github.com/franco-grobler/cowsay-rs"
authors = ["Franco Grobler <franco@grobler.fyi>"]
license = "UNLICENSE"
categories = ["command-line-utilities"]
keywords = ["cowsay", "cli", "command-line", "ascii-art", "fun"]

[workspace.dependencies]
cowsay = { path = "crates/cowsay" }
cowsay-parser = { path = "crates/cowsay-parser" }
cowsay-template = { path = "crates/cowsay-template" }

clap = { version = "4.5.53", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1.0.0" }
getrandom = { version = "0.3.4" }
include_directory = "0.1.1"
js-sys = { version = "0.3.83" }
log = { version = "0.4.29" }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
textwrap = { version = "0.16.2", features = [] }
wasm-bindgen = { version = "0.2.106" }
wasm-bindgen-test = { version = "0.3.56" }

# Dev dependencies
assert_cmd = { version = "2.1.1", features = ["color"] }
glob = "0.3.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"

[workspace.metadata.cargo-shear]
ignored = ["getrandom", "uuid"]

[workspace.lints.rust]
# Deny lints that are "warn" by default
warnings = "deny"

# --- Code Quality & Correctness ---
unreachable_pub = "deny" # Detects public items that are not reachable
unsafe_code = "deny"     # Forbids any use of `unsafe` blocks.

# --- Documentation ---
missing_docs = "deny"                  # Requires all public items to be documented
missing_debug_implementations = "deny" # Requires `#[derive(Debug)]` on structs/enums

# --- Style ---
non_snake_case = "deny"
non_camel_case_types = "deny"
non_upper_case_globals = "deny"

# === Clippy Lints ===
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"      # Good to have, but `pedantic` enables it.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
