[package]
name = "cowsay-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cowsay-rs"
path = "src/main.rs"

[dependencies]
cowsay = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
