[package]
name = "cowsay-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
description = "Command-line interface for cowsay-rs"

[[bin]]
name = "cowsay-rs"
path = "src/main.rs"

[dependencies]
cowsay = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
