[package]
name = "cowsay-parser"
version = "0.0.1"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
cowsay-template = { workspace = true }
textwrap = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
