[package]
name = "cowsay-template"
version = "0.1.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories.workspace = true
keywords.workspace = true
readme.workspace = true
description = "A template engine for cowsay templates"

[dependencies]
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"

[lints]
workspace = true
