[package]
name = "cowsay-template"
publish = false
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories.workspace = true
keywords.workspace = true
readme.workspace = true
description = "Template engine for cowsay templates"

[dependencies]
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
