[package]
name = "cowsay-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
description = "WebAssembly bindings for Cowsay-RS"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
cowsay = { workspace = true }

# console_error_panic_hook = { workspace = true, optional = true }
# console_log = { workspace = true }
js-sys = { workspace = true }
# log = { workspace = true }
# getrandom = { workspace = true, features = ["wasm_js"] }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
# uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
# wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
