[package]
name = "cowsay"
publish = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
description = "A Rust implementation of the classic cowsay program"

[dependencies]
cowsay-parser = { workspace = true }
cowsay-template = { workspace = true }

include_directory = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
glob = "0.3.3"
pretty_assertions = "1.4.1"

[lints]
workspace = true
